crates/courier-ftp-core/tests/snapshots/unix_listing__unix_fixtures_snapshot@months-chinese.txt.snap
---
source: crates/courier-ftp-core/tests/unix_listing.rs
expression: "Snapshot { used_fallback_encoding: used_fallback, lines: out, }"
input_file: crates/courier-ftp-core/tests/listings/unix/months-chinese.txt
---
used_fallback_encoding: false
lines:
  - line: 1
    outcome: entry
    entry:
      name: 一月.txt
      kind: file
      size: 100
      modified: "2024-01-31T12:00:00Z (Minute)"
      permissions: rw-r--r-- (644)
      owner: li
      group: users
      hidden: false
  - line: 2
    outcome: entry
    entry:
      name: 十二月.txt
      kind: file
      size: 100
      modified: "2023-12-24T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: li
      group: users
      hidden: false
  - line: 3
    outcome: entry
    entry:
      name: 国庆.txt
      kind: file
      size: 100
      modified: "2023-10-01T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: li
      group: users
      hidden: false
