crates/courier-ftp-core/tests/snapshots/unix_listing__unix_fixtures_snapshot@months-italian.txt.snap
---
source: crates/courier-ftp-core/tests/unix_listing.rs
expression: "Snapshot { used_fallback_encoding: used_fallback, lines: out, }"
input_file: crates/courier-ftp-core/tests/listings/unix/months-italian.txt
---
used_fallback_encoding: false
lines:
  - line: 1
    outcome: entry
    entry:
      name: gennaio.txt
      kind: file
      size: 100
      modified: "2024-01-31T12:00:00Z (Minute)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
  - line: 2
    outcome: entry
    entry:
      name: maggio.txt
      kind: file
      size: 100
      modified: "2024-05-05T10:00:00Z (Minute)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
  - line: 3
    outcome: entry
    entry:
      name: giugno.txt
      kind: file
      size: 100
      modified: "2023-06-01T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
  - line: 4
    outcome: entry
    entry:
      name: luglio.txt
      kind: file
      size: 100
      modified: "2023-07-14T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
  - line: 5
    outcome: entry
    entry:
      name: agosto.txt
      kind: file
      size: 100
      modified: "2023-08-15T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
  - line: 6
    outcome: entry
    entry:
      name: settembre.txt
      kind: file
      size: 100
      modified: "2023-09-09T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
  - line: 7
    outcome: entry
    entry:
      name: ottobre.txt
      kind: file
      size: 100
      modified: "2023-10-31T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
  - line: 8
    outcome: entry
    entry:
      name: dicembre.txt
      kind: file
      size: 100
      modified: "2023-12-24T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: gianni
      group: users
      hidden: false
